Upgraded to GraalVM and Gradle 9.5.1, it's mostly functional.